--- a/README
+++ b/README
@@ -7,3 +7,4 @@ Testing V0.0.0
 
   Feature #1 intended for release V0.1.0
   Feature #2 added for release V0.1.0
+  Feature #3 added for release V0.1.0 - added after release branch created
