--- a/README
+++ b/README
@@ -9,3 +9,6 @@ Testing V0.0.0
   Feature #2 added for release V0.1.0
   Feature #3 added for release V0.1.0 - added after release branch created
   Feature #4 added for release V0.1.0 - added after release branch created
+
+Version V0.2.0 - start dev work
+
