--- a/README
+++ b/README
@@ -11,4 +11,5 @@ Testing V0.0.0
   Feature #4 added for release V0.1.0 - added after release branch created
 
 Version V0.2.0 - start dev work
+  Tagging D2.1
 
